--- a/Devs.Application/Devs.Application.csproj
+++ b/Devs.Application/Devs.Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -20,8 +20,7 @@
   </ItemGroup>
 	
 	  <ItemGroup>
-	    <Folder Include="Features\AppUserFeatures\Models\" />
-	    <Folder Include="Features\AppUserFeatures\Queries\" />
+	    <Folder Include="Features\AuthFeatures\Dtos\" />
 	    <Folder Include="Features\UserGitHubFeatures\Models\" />
 	    <Folder Include="Features\UserGitHubFeatures\Queries\" />
 	  </ItemGroup>
