--- a/Devs.WebApi/appsettings.json
+++ b/Devs.WebApi/appsettings.json
@@ -8,5 +8,11 @@
   "ConnectionStrings": {
     "KodlamaIoDevsConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=KodlamaIoDevsDb;Trusted_Connection=True;"
   },
-  "AllowedHosts": "*"
-}
+  "TokenOptions": {
+    "Audience": "test@testor.com",
+    "Issuer": "test@testor.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "TestSecretKey"
+  },
+    "AllowedHosts": "*"
+  }
