--- a/Devs.Persistence/Devs.Persistence.csproj
+++ b/Devs.Persistence/Devs.Persistence.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\Devs.Domain\Devs.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
