--- a/Devs.WebApi/appsettings.json
+++ b/Devs.WebApi/appsettings.json
@@ -6,13 +6,14 @@
     }
   },
   "ConnectionStrings": {
-    "KodlamaIoDevsConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=KodlamaIoDevsDb;Trusted_Connection=True;"
+    "KodlamaIoDevsConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=KodlamaIoDevsDb1;Trusted_Connection=True;"
   },
   "TokenOptions": {
-    "Audience": "test@testor.com",
-    "Issuer": "test@testor.com",
+    "Audience": "test@kodlamaIoTest.com",
+    "Issuer": "test@kodlamaIoTest.com",
     "AccessTokenExpiration": 10,
-    "SecurityKey": "TestSecretKey"
+    "SecurityKey": "strongandsecretkeystrongandsecretkey",
+    "RefreshTokenTTL": 2
   },
-    "AllowedHosts": "*"
-  }
+  "AllowedHosts": "*"
+}
